--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,27 @@
 html {
   font-family: "Open Sans", sans-serif;
   padding: 1rem .5rem;
+  background-color: #fff;
 }
 
-fieldset {
-  border: 
+h1 {
+  border-bottom: 1px solid #000;
+}
+
+.remove-border {
+  border: none;
+  padding: 0;
+  border-top: 1px solid #000;
+}
+
+input {
+  border-color: #f2f2f2;
+}
+
+@media only screen and (min-width: 60em) {
+
+  fieldset div {
+    border-collapse: separate;
+  }
+
 }
